--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,13 @@
     padding: 0;
 }
 
-header {
-    width: 100%;
-    background-color: rebeccapurple;
-    min-height: 50px;
-    color: #fff;
-    border-bottom: 2px solid rgb(152, 133, 170)
+span {
+    align-self: auto;
+}
+#main-info {
+    font-size: 24px;
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    color: #190021;
-    font-family: 'Mono';
+#main-ico, #main-value {
+    font-size: 96px;
 }
