--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ span {
 }
 
 .image {
-    background-image: url(../images/sun.jpg);
+    background-image: url(../images/clouds.jpg);
     background-color: rgb(63, 130, 192);
     background-size: 470px 200px;
     background-repeat: no-repeat;
@@ -34,11 +34,21 @@ span {
     background-color: rgb(19, 64, 107);
     color: rgb(255, 255, 255);
     text-shadow: 1px 1px 1px #000;
-    border: 4px solid  rgb(63, 130, 192);
+    border: 2px solid  rgb(63, 130, 192);
 }
 
 .day {
     background-color: rgba(63, 130, 192, 0.171);
+}
+
+.day:hover {
+    background-color: rgba(63, 130, 192, 0.288);
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.day:active {
+    border: orange solid 2px;
 }
 
 #extra {
