--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,21 @@ span {
     border: orange solid 2px;
 }
 
+.time {
+    float: left;
+    padding: 0px;
+    font-size: 24px;
+}
+
+#time {
+    margin-left: 4px;
+    width: 427px;
+}
+
 #extra {
     padding-left: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 #main-info {
