--- a/css/style.css
+++ b/css/style.css
@@ -18,30 +18,34 @@ span {
 
 .image-clouds {
     background-image: url(../images/clouds.jpg);
-    background-color: rgba(63, 130, 192, 0.404);
+    background-color: rgba(63, 130, 192, 0.288);
     background-size: 470px 200px;
     background-repeat: no-repeat;
+    transition: 0.5s;
 }
 
 .image-sun {
     background-image: url(../images/sun.jpg);
-    background-color: rgba(63, 130, 192, 0.404);
+    background-color: rgba(63, 130, 192, 0.288);
     background-size: 470px 200px;
     background-repeat: no-repeat;
+    transition: 0.5s;
 }
 
 .image-night {
     background-image: url(../images/night.jpg);
-    background-color: rgba(63, 130, 192, 0.404);
+    background-color: rgba(63, 130, 192, 0.288);
     background-size: 470px 200px;
     background-repeat: no-repeat;
+    transition: 0.5s;
 }
 
 .image-night-rain {
     background-image: url(../images/night-rain.jpg);
-    background-color: rgba(63, 130, 192, 0.404);
+    background-color: rgba(63, 130, 192, 0.288);
     background-size: 470px 200px;
     background-repeat: no-repeat;
+    transition: 0.5s;
 }
 
 .month {
@@ -63,6 +67,7 @@ span {
     background-color: rgba(63, 130, 192, 0.171);
     padding: 0;
     margin: 3px;
+    color: rgb(12, 41, 68);
 }
 
 .next {
@@ -80,18 +85,45 @@ span {
 }
 
 .time {
-    float: left;
+    margin-left: -10px;
     padding: 0px;
-    font-size: 24px;
+    font-size: 16px;
+    color: rgba(22, 61, 97, 0.63);
+    text-shadow: 0px 0px 0px rgba(17, 34, 51, 0.192);
+}
+
+#date {
+    width: 225px;
+    align-content: center;
+}
+
+#date-month {
+    text-align: center;
+    width: 40px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+#date-year {
+    text-align: center;
+    width: 60px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+.add {
+    font-size: 20px;
+    color: rgb(18, 59, 97);;
+    text-shadow: 0px 0px 0px #000;
 }
 
 #time {
-    margin-left: 4px;
-    width: 427px;
+    margin-left: 15px;
+    width: 466px;
 }
 
 #extra {
-    padding-left: 30px;
+    margin-left: 60px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
